--- a/env.example
+++ b/env.example
@@ -1,7 +1,5 @@
-SECRET_KEY=xxx
-DEBUG=True
-DB_NAME=xxx
-DB_USER=xxx
-DB_PASSWORD=xxx
-DB_HOST=xxx
-DB_PORT=xxx
+POSTGRES_DB="*"
+POSTGRES_USER="*"
+POSTGRES_PASSWORD="*"
+POSTGRES_HOST="*"
+POSTGRES_PORT="*"
